--- a/crudsnap.cabal
+++ b/crudsnap.cabal
@@ -3,7 +3,7 @@
 
 name:                crudsnap
 version:             0.1.0.0
-synopsis:            Get CRUD Handlers for your resources for free.
+synopsis:            Get CRUD Handlers for your resources for free, or at least cheap.
 -- description:         
 license:             BSD3
 license-file:        LICENSE
@@ -25,9 +25,14 @@ library
                        heist == 0.13.*,
                        lens >= 3.0 && < 5,
                        mtl == 2.1.*,
+                       snap-core == 0.9.*,
                        snap >=0.13 && < 0.14,
                        text >= 0.11 && < 1.2,
                        transformers == 0.3.*
 
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+Test-Suite crud-test
+    type:    exitcode-stdio-1.0
+    main-is: TestMain.hs
