--- a/crudsnap.cabal
+++ b/crudsnap.cabal
@@ -21,14 +21,17 @@ library
   -- other-extensions:    
   build-depends:       base >=4.6 && <4.7,
                        bytestring == 0.10.*,
+                       containers == 0.5.*,
                        groundhog == 0.4.*,
+                       groundhog-utils == 0.1.*,
                        heist == 0.13.*,
                        lens >= 3.0 && < 5,
                        mtl == 2.1.*,
                        snap-core == 0.9.*,
                        snap >=0.13 && < 0.14,
                        text >= 0.11 && < 1.2,
-                       transformers == 0.3.*
+                       transformers == 0.3.*,
+                       xmlhtml == 0.2.*
 
   hs-source-dirs:      src
   default-language:    Haskell2010
